syntax = "proto3";

package cacheserver.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = "cacheserver/api/cacheserver/v1;v1";

message SetSecretRequest {
  string key = 1;
  string name = 2;
  optional google.protobuf.Duration expire = 3;
  string description = 4;
}

message DelSecretRequest {
  string key = 1;
}

message GetSecretRequest {
  string key = 1;
}

message GetSecretResponse {
  string userID = 1;
  string name = 2;
  string secretID = 3;
  string secretKey = 4;
  int64 expires = 5;
  int32 status = 6;
  string description = 7;
  google.protobuf.Timestamp createdAt = 8;
  google.protobuf.Timestamp updatedAt = 9;
}
